--- a/Tic Tac Toe Game Board/index.html
+++ b/Tic Tac Toe Game Board/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="board">
         <h1>Tic Tac Toe</h1>
-        <p class="result">Playing.....</p>
+        <p class="result"></p>
         <div class="row">
             <div class="top left" id="one" ></div>
             <div class="top middle" id="two"></div>
