--- a/Tic Tac Toe Game Board/index.html
+++ b/Tic Tac Toe Game Board/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="board">
-        <h1>Tic Tac Toe</h1>
+        <h1>মজাদার খেলা</h1>
         <p class="result"></p>
         <div class="row">
             <div class="top left" id="one" ></div>
