--- a/JS/99 Lines of Code/js_index.html
+++ b/JS/99 Lines of Code/js_index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="app.js"></script>
+    
     <link rel="stylesheet" href="js.css">
 </head>
 <body>
-    <h1>My Singing Friends</h1>
+    <!-- <h1>My Singing Friends</h1>
     <div class="friend">
         <h3>Friend</h3>
         <p>Test1</p>
@@ -17,6 +17,8 @@
         <p>Test3</p>
         <p>Test4</p>
         <p>Test5</p>
-    </div>
+    </div> -->
+    <button>Sing!</button>
+    <script src="app.js"></script>
 </body>
-</html>
+</html> 
