--- a/JS/dom/dom2/index.html
+++ b/JS/dom/dom2/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>DOM DOM DOMMMMMMM!!!</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-
 <body>
-<!-- <button class="btn">Click to add new list item</button> -->
-<!-- <ul class="list"></ul> -->
+    
+    <!-- DO NOT ADD ANY HTML HERE -->
+    <!-- YOU MAY IMPORT HERE -->
 </body>
-
 </html>
